--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -3,10 +3,10 @@
         <p class="alert"><%= error %></p> <!-- Display the error message -->
     <% } %>
     <h1>Register</h1>
-    <form action="/usr/352/users/registered" method="POST">
+    <form action="/users/registered" method="POST">
         <input type="email" name="email" placeholder="Email" value="<%= formData.email || '' %>" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
     </form>
-    <p>Already have an account? <a href="/usr/352/users/login">Login here</a></p>
+    <p>Already have an account? <a href="/users/login">Login here</a></p>
 </div>
