--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,7 +8,7 @@
                 <img src="<%= movie.poster %>" alt="<%= movie.title %>">
                 <h3><%= movie.title %></h3>
                 <p>Rating: <%= movie.vote_average %>/10</p>
-                <a href="/usr/352/movies/details?movieId=<%= movie.id %>" class="view-details">View More Details</a>
+                <a href="/movies/details?movieId=<%= movie.id %>" class="view-details">View More Details</a>
             </div>
         <% }) %>
     </
