--- a/views/pages/movieDetails.ejs
+++ b/views/pages/movieDetails.ejs
@@ -48,7 +48,7 @@
         <p><strong>Overview:</strong> <%= movie.overview %></p>
 
         <!-- Comment Form -->
-        <form action="/usr/352/comments/add" method="POST" class="comment-form">
+        <form action="/comments/add" method="POST" class="comment-form">
             <input type="hidden" name="imdb_id" value="<%= movie.id %>">
             <textarea name="comment" placeholder="Write your comment here..." required maxlength="280"></textarea>
             <button type="submit">Submit Comment</button>
