--- a/views/pages/watchlist.ejs
+++ b/views/pages/watchlist.ejs
@@ -3,7 +3,7 @@
         <h1>Your Watchlist</h1>
 
         <!-- Search Form -->
-        <form action="/watchlist" method="GET" class="search-form">
+        <form action="/usr/352/watchlist" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search your watchlist..." value="<%= query %>">
             <button type="submit">Search</button>
         </form>
@@ -26,7 +26,7 @@
                         <tr>
                             <td><%= movie.title %></td>
                             <td>
-                                <form action="/watchlist/update" method="POST">
+                                <form action="/usr/352/watchlist/update" method="POST">
                                     <input type="hidden" name="movieId" value="<%= movie.imdb_id %>">
                                     <input 
                                         type="checkbox" 
