--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -14,5 +14,5 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="/users/register">Register here</a></p>
+    <p>Don't have an account? <a href="/usr/352/users/register">Register here</a></p>
 </div>
