--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,10 @@
 <nav>
     <ul>
-      <li><a href="/usr/352/">Home</a></li>
-      <li><a href="/usr/352/about">About</a></li>
-      <li><a href="/usr/352/movies/search">Movies</a></li>
-      <li><a href="/usr/352/watchlist">Watchlist</a></li>
-      <li><a href="/usr/352/logout">Logout</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/movies/search">Movies</a></li>
+      <li><a href="/watchlist">Watchlist</a></li>
+      <li><a href="/logout">Logout</a></li>
     </ul>
 </nav>
   
