--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,7 +9,7 @@
         </div>
     <% } %>
     <h1>Login</h1>
-    <form action="/usr/352/users/loggedin" method="POST">
+    <form action="/users/loggedin" method="POST">
         <input type="email" name="email" placeholder="Email" value="<%= formData.email || '' %>" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
