--- a/views/pages/watchlist.ejs
+++ b/views/pages/watchlist.ejs
@@ -26,7 +26,7 @@
                         <tr>
                             <td><%= movie.title %></td>
                             <td>
-                                <form action="/usr/352/watchlist/update" method="POST">
+                                <form action="/watchlist/update" method="POST">
                                     <input type="hidden" name="movieId" value="<%= movie.imdb_id %>">
                                     <input 
                                         type="checkbox" 
