corrected route url

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -8,5 +8,5 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
     </form>
-    <p>Already have an account? <a href="/usr/352/users/login">Login here</a></p>
+    <p>Already have an account? <a href="/users/login">Login here</a></p>
 </div>
