--- a/views/pages/watchlist.ejs
+++ b/views/pages/watchlist.ejs
@@ -3,7 +3,7 @@
         <h1>Your Watchlist</h1>
 
         <!-- Search Form -->
-        <form action="/usr/352/watchlist" method="GET" class="search-form">
+        <form action="/watchlist" method="GET" class="search-form">
             <input type="text" name="query" placeholder="Search your watchlist..." value="<%= query %>">
             <button type="submit">Search</button>
         </form>
