--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,10 +7,10 @@
             <div class="movie">
                 <img src="<%= movie.poster %>" alt="<%= movie.title %>">
                 <h3><%= movie.title %></h3>
-                <p>Rating: <%= movie.vote_average %>/10</p>
+                <p>Rating: <%= movie.vote_average %></p>
                 <a href="/movies/details?movieId=<%= movie.id %>" class="view-details">View More Details</a>
             </div>
         <% }) %>
     </
-    div>
+    </div>
 </div>
