auth pop up message

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,7 +4,7 @@
     <% } %>
     <% if (messages.error) { %>
         <script type="text/javascript">
-            alert('<%= messages.error %>'); 
+            alert('<%= error %>'); 
         </script>
     <% } %>
     <h1>Login</h1>
