--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,11 +1,12 @@
 <div class="login-container">
-    <% if (error) { %>
+    <!-- <% if (error) { %>
         <p class="alert"><%= error %></p> <!-- Display the error message -->
-    <% } %>
+
     <% if (messages.error && messages.error.length > 0) { %> 
         <script type="text/javascript">
-            alert('<%= messages.error[0] %>');
+            alert('<%= messages.error[0] %>');  <!-- Show flash message -->
         </script>
+        <p><%= messages.error[0] %></p>  <!-- Also display the message in text format for debugging -->
     <% } %>
     <h1>Login</h1>
     <form action="/users/loggedin" method="POST">
