--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,7 +1,14 @@
 <div class="login-container">
+    <% if (flashMessage.length > 0) { %>
+        <div class="alert alert-danger">
+          <%= flashMessage %>
+        </div>
+    <% } %>
+
     <% if (error) { %>
         <p class="alert"><%= error %></p> <!-- Display the error message -->
     <% } %>
+
     <h1>Login</h1>
     <form action="/users/loggedin" method="POST">
         <input type="email" name="email" placeholder="Email" value="<%= formData.email || '' %>" required>
